# Project_Thesis_HULKs

./: .gitignore  CMakeLists.txt  NaoPoseInfo.hpp  NaoProjectionDataProvider.hpp  NaoStability.hpp  NaoTorsoPose.hpp  ObservationSensitivityProvider.hpp  PoseFilter.cpp  README.md  SensitivityExtractor.cpp  SensitivitySorter.cpp  Solvers.hpp  poseGenerator-bak.cpp  poseGenerator.cpp  poseGeneratorMC.cpp  recursiveIter.cpp  runAll.sh  test1.cpp  tests.cpp  tuhhSDKInfo.cmake  utils.hpp
Data/: 11-25-long-left_FilteredPoses_generic.txt  2019-03-10_data2018_FilteredPoseCosts_generic.txt  2019-03-10_data2018_FilteredPoses_generic.txt  2019-03-10_data2018_dbl_n_TestPoses_generic  2019-03-10_data2018_n1_FilteredPoseCosts_generic.txt  2019-03-10_data2018_n1_FilteredPoses_generic.txt  2019-03-10_data2018_n1_TestPoses_generic  2019-03-10_data2018_n_FilteredPoseCosts_generic.txt  2019-03-10_data2018_n_FilteredPoses_generic.txt  2019-03-10_data2018_n_TestPoses_generic  2019-03-10_data2019_dbl_n_TestPoses_generic  2019-03-15_data2018_orig_dbl_n_FilteredPoseCosts_generic.txt  2019-03-15_data2018_orig_dbl_n_FilteredPoses_generic.txt  2019-03-15_data2018_orig_dbl_n_TestPoses_generic  2019-03-19_data2019_dbl_n_FilteredPoseCosts_generic.txt  2019-03-19_data2019_dbl_n_FilteredPoses_generic.txt  2019-03-19_data2019_dbl_n_TestPoses_generic  calibFeatureCharucoMulti.txt  calibFeatureGround.txt  d_10k_6_5degjointErrors.txt  l_10k_3_5degjointErrors.txt  l_10k_4_5degjointErrors.txt
configuration/: limits_d.json  limits_l.json  limits_r.json
doc/: .gitignore
doc/Notes/: Evaluation 1.md  Introduction and Problem statement.md  Literature Review.md  Methodology.md
doc/figures/: backlash.pdf_tex  backlash.tex  joint_noise.tex  joint_noise_gaussian.tex
doc/logs/: 2019-01-09_master_poses.txt  2019-01-09_originalLinking_Fixed_cost_FixedIndexing.txt  2019-01-09_originalLinking_Fixed_cost_FixedIndexing_new_isNear.txt  2019-03-30_jointAngleDump.txt
doc/logs/2019-01-09/: 2019-01-09_originalLinking_WRONG_poses.txt
doc/logs/2019-03-25/: l_10k_jointErrors.txt
doc/logs/2019-03-25/10k_errors_6.5_noNoise_2019-03-19_data2019_dbl_n_FilteredPoses_generic/: calibratedResidualX  calibratedResidualY  log.txt  originalResidualX  originalResidualY  resultOut  unCalibratedJointResidual
doc/logs/2019-03-25/10k_errors_6.5_pxNoise-0.5-stdDev_2019-03-19_data2019_dbl_n_FilteredPoses_generic/: calibratedJointResidual  calibratedResidualX  calibratedResidualY  log.txt  originalResidualX  originalResidualY  resultOut  rois.txt
doc/logs/2019-03-25/10k_errors_6.5_pxNoise_2019-03-19_data2019_dbl_n_FilteredPoses_generic/: calibratedJointResidual  calibratedResidualX  calibratedResidualY  log.txt  originalResidualX  originalResidualY  resultOut  test_rois.txt
doc/logs/2019-05-26/: configPrefixInfos.json  summary.json
doc/logs/2019-05-27/: configPrefixInfos.json  summary.json
doc/logs/2019-05-27/6.5_5k_n3_charucoMulti_both/: out_log.txt
doc/logs/2019-05-27/6.5_5k_n3_charucoMulti_joint/: out_log.txt
doc/logs/2019-05-27/6.5_5k_n3_charucoMulti_noNoise/: .directory  out_errors.txt  out_log.txt
doc/logs/2019-05-27/6.5_5k_n3_charucoMulti_pixel/: out_log.txt
doc/logs/2019-05-27/6.5_5k_n3_gnd_both/: out_log.txt  out_resultOut  outrms_hist.tex
doc/logs/2019-05-31/: configPrefixInfos.json  summary.json
doc/logs/2019-06-01/: configPrefixInfos.json  summary.json
doc/logs/2019-06-02/: configPrefixInfos-stoch.json  configPrefixInfos.json  summary.json
doc/scripts/: Untitled.ipynb  Untitled.py  combinations.py  generateTables.py  graphsTest1.py  ground_fov_visualize.py  plotJointNoise.py  postprocess.py  runEvalTests.py  runEvalTests.sh  testConfigUtils.py  utils.py
doc/thesis-new/tuvisionthesis/: preamble.tex  thesis.tex  thesis_externalTikZ.tex  tuvisionthesis.cls  tuvisionthesis.dtx
doc/tuvisionthesis/: .cvsignore  README.txt  TUHH_print.bb  TUHH_screen.eps  TUVision_print.bb  TUVision_print.eps  bibliography.bib  myIEEEtrn.bst  preamble.tex  thesis.tex  thesis_externalTikZ.tex  tuvisionthesis.cls  tuvisionthesis.dtx  tuvisionthesis.ins
doc/tuvisionthesis/figures/: backlash.pdf_tex  charuco.pdf_tex  joint_noise.tex  joint_noise_gaussian.tex  outafter_hist.tex  outbefore_hist.tex  outmain_reproj_err.tex  outrms_hist.tex  test.tex
lib/: CMakeLists.txt
lib/inc/: CameraObservationModel.hpp  MiniConfigHandle.hpp  NaoCollision.hpp  NaoPoseInfo.hpp  NaoProjectionDataProvider.hpp  NaoStability.hpp  NaoTorsoPose.hpp  ObservationModel.hpp  ObservationSensitivityProvider.hpp  Sensors.hpp  Solvers.hpp  TUHHMin.hpp  utils.hpp
lib/src/: CameraObservationModel.cpp  NaoCollision.cpp  NaoPoseInfo.cpp  NaoProjectionDataProvider.cpp  NaoStability.cpp  NaoTorsoPose.cpp  utils.cpp
src/: CMakeLists.txt  PoseChaining.cpp  PoseFilter.cpp  PoseLookup.cpp  SensitivityExtractor.cpp  calibServer.cpp  poseGenerator.cpp  recursiveIter.cpp  runAll.sh
src/configuration/: cameraObsModelConf.json  limits_l.json  limits_r.json  poseFilterConf.json  simGridEvalConf.json
src/lib/: CMakeLists.txt  tuhhSDKInfo.cmake
src/lib/inc/: CalibrationFeatures.hpp  CameraObservationModel.hpp  GeomUtils.hpp  Interactions.hpp  JointCalibEval.hpp  JointCalibSolver.hpp  MiniConfigHandle.hpp  NaoCollision.hpp  NaoJointAndSensorModel.hpp  NaoPoseInfo.hpp  NaoProjectionDataProvider.hpp  NaoStability.hpp  NaoTorsoPose.hpp  ObservationModel.hpp  ObservationSensitivityProvider.hpp  ScannerObservationModel.hpp  Sensors.hpp  Solvers.hpp  TUHHMin.hpp  constants.hpp  interactions.hpp  utils.hpp
src/lib/src/: CameraObservationModel.cpp  NaoCollision.cpp  NaoJointAndSensorModel.cpp  NaoProjectionDataProvider.cpp  NaoStability.cpp  ObservationSensitivityProvider.cpp  Sensors.cpp  utils.cpp
src/tests/: JointCalibSolverTest.cpp  JointErrorGeneration.cpp  SimCalibTest.cpp  calibFeatureTest.cpp  camObsTest.cpp  icpTest.cpp  interactionTest.cpp  interactiontest.cpp  simTest.cpp  test1.cpp  tests.cpp
src/tests/test_data/: l_1000.txt  l_1000_jointErrors.txt
tests/: camObsTest.cpp  icpTest.cpp  test1.cpp  tests.cpp
tests/test_data/: strangeJoints.txt
(+298 files in other folders)
